force-app/main/default/objects/Orden_de_Compra__c/Orden_de_Compra__c.object-meta.xml
<CustomObject>
    <label>Orden de Compra</label>
    <nameField>
        <label>Orden de Compra Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordenes de Compra</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>