force-app/main/default/objects/Orden_de_Compra__c/fields/Asignado_A__c.field-meta.xml
<CustomField>
    <fullName>Asignado_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asignado A</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Asignado A</relationshipLabel>
    <relationshipName>Ordenes_de_Compra</relationshipName>
    <type>Lookup</type>
</CustomField>