force-app/main/default/objects/Orden_de_Compra__c/fields/Dias_Restrasado__c.field-meta.xml
<CustomField>
    <fullName>Dias_Restrasado__c</fullName>
    <label>Dias Restrasado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>