force-app/main/default/objects/Orden_de_Compra__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Progreso</fullName>
            </value>
            <value>
                <fullName>Retrasado</fullName>
            </value>
            <value>
                <fullName>Aprobado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>