force-app/main/default/objects/Orden_de_Compra__c/fields/Fecha_Orden_de_Compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Orden_de_Compra__c</fullName>
    <label>Fecha Orden de Compra</label>
    <type>Date</type>
</CustomField>