force-app/main/default/objects/Orden_de_Compra__c/fields/Nombre_de_La_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_La_Empresa__c</fullName>
    <label>Nombre de La Empresa</label>
    <length>30</length>
    <type>Text</type>
</CustomField>