force-app/main/default/objects/Orden_de_Compra__c/fields/Responsable__c.field-meta.xml
<CustomField>
    <fullName>Responsable__c</fullName>
    <label>Responsable</label>
    <type>Date</type>
</CustomField>